# NODUS_s

./: .dockerignore  .env.example  .env.production  .gitignore  BACKEND_BUG_REPORT.md  BACKEND_FIX_CHAT_DELETED.md  BACKEND_FIX_RESPONSE.md  BACKEND_V2_CHANGELOG.md  DEBUG_500_ERROR.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.prod  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_TEAM_INFO.md  MEDIA_SETUP.md  MESSAGE_READ_FEATURE.md  MESSAGE_STATUS_IN_DB.md  QUICK_FIX.md  QUICK_START.md  QUICK_START_DOCKER.md  README.md  REALTIME_STATUS_UPDATE.md  REALTIME_SYNC_FIXES.md  RELEASE_NOTES.md  TEAM_REPORT_V2.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_db_connection.py  test_minio.py
alembic/: env.py
alembic/versions/: 20240326_0001_initial.py  20241104_0002_add_user_tag.py  20241104_0003_add_message_reads.py  20241104_0004_add_message_status.py  20241105_0005_advanced_features.py  20241106_0006_add_friends_and_pinned_chats.py  2025_11_06_add_attachments_table.py
app/: main.py
app/api/: dependencies.py  router.py  utils.py  ws.py
app/core/: config.py  jwt.py  security.py  storage.py
app/db/: session.py
app/domain/: __init__.py  models.py
app/repositories/: attachment.py  base.py  chat.py  friend.py  message.py  message_reaction.py  message_read.py  pinned_chat.py  user.py
app/schemas/: attachment.py  auth.py  chat.py  friend.py  message.py  pinned_chat.py  presence.py  user.py
deploy/: README.md  deploy.sh  nginx-docker.conf  nginx-host.conf  nginx.conf  nodus-backend.service  quick-start.sh  setup-nginx-host.sh
docs/: BACKEND_CHECKLIST.md  BACKEND_FIXES.md  CHANGELOG_2024_11_04.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  FRONTEND_API.md  NEW_FEATURES.md  QUICKSTART_FRONTEND.md  TESTING_GUIDE.md  TYPESCRIPT_EXAMPLES.md
scripts/: check_network.ps1  complete_reset.ps1  debug_postgres.ps1  fix_postgres_auth.ps1  init.ps1  init.sh  reset_database.ps1
tests/: conftest.py  test_attachments.py  test_security.py  test_worker.py
(+15 files in other folders)
