[project]
name = "nodus_s"
version = "0.1.0"
description = "NODUS_s monolithic FastAPI application"
readme = "README.md"
requires-python = "~=3.12"
authors = [{name = "NODUS", email = "dev@example.com"}]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "sqlalchemy[asyncio]>=2.0.29",
  "pydantic>=2.6.4",
  "pydantic-settings>=2.2.1",
  "alembic>=1.13.1",
  "psycopg[binary,pool]>=3.1.18",
  "redis>=5.0.3",
  "rq>=1.15.1",
  "passlib[bcrypt]>=1.7.4",
  "orjson>=3.10.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.1.1",
  "pytest-asyncio>=0.23.5",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
